# do4ds_v2

./: .Rprofile  .gitignore  .nojekyll  README.md  _quarto.yml  api-s3.py  app-api.R  app-api.py  do4ds_v2.qmd  eda.html  eda.qmd  index.html  index.qmd  main.py  model.html  model.qmd  model.quarto_ipynb  my-db.duckdb  pyproject.toml  robots.txt  s3-write-model.py  search.json  sitemap.xml
.github/workflows/: publish.yml
.quarto/project-cache/: deno-kv-file
data/model/penguin_model/20250824T130103Z-49eca/: data.txt
