[project]
name = "do4ds-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.6"
dependencies = [
    "duckdb>=1.3.2",
    "numpy>=2.3.2",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.2",
    "pins>=0.9.0",
    "quarto>=0.1.0",
    "scikit-learn>=1.7.1",
    "setuptools>=80.9.0",
    "vetiver>=0.2.6",
]
